Como inserir imagens em seu site

--- a/curso-html5/index.html
+++ b/curso-html5/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img src="foto.png" alt="Foto Cassio Rodrigues">
             <h1>Cassio Rodrigues</h1>
         </header>
         <section>
@@ -15,6 +16,7 @@
             <article>
                 <header>
                     <h3>Post #1</h3>
+                    <img src="image-from-rawpixel-id-395289-jpeg.jpg" alt="Tela com código">
                 </header>
                 <p>
                     Minions ipsum uuuhhh uuuhhh underweaaar tatata bala tu hahaha bee do bee do bee do tulaliloo para tú potatoooo. Butt potatoooo belloo! <a href="http://www.calberhs.com/minionsipsum/" target="_blank">Bananaaaa potatoooo</a> potatoooo po kass jiji. Ti aamoo! wiiiii baboiii hahaha underweaaar underweaaar jeje po kass. Tank yuuu! hahaha baboiii ti aamoo! Pepete para tú. Gelatooo hana dul sae daa hahaha. Me want bananaaa! belloo! <a href="mailto:cassiorodrigues@email.com">Me want bananaaa!</a> Poopayee poopayee hahaha hana dul sae poopayee pepete me want bananaaa! Bee do bee do bee do hana dul sae la bodaaa wiiiii. Jiji daa bee do bee do bee do me want bananaaa! Jiji.
