--- a/curso-html5/index.html
+++ b/curso-html5/index.html
@@ -23,6 +23,18 @@
                 </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:cassiorodrigues@email.com">cassiorodrigues@email.com</a>
+                </li>
+                <li>
+                    <a href="http://www.calberhs.com/minionsipsum/" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/cassiomrodrigues/dio-bootcamp-eduzz_fullstack_developer" target="_blank">GitHub</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
