--- a/curso-html5/index.html
+++ b/curso-html5/index.html
@@ -25,7 +25,7 @@
             </article>
         </section>
         <footer>
-            <ul>
+            <ul class="contacts_list">
                 <li>
                     <a href="mailto:cassiorodrigues@email.com">cassiorodrigues@email.com</a>
                 </li>
